# Fan-s-Janken-Game-neo

./: .gitignore  Dockerfile  Procfile  README.md  heroku.yml  manage.py  pyproject.toml  requirements.txt  runtime.txt
app/janken_neo/: asgi.py  settings.py  wsgi.py
heroku_env/: pyvenv.cfg
janken/: __init__.py  urls.py  views.py
janken/templates/janken/: index.html
janken_neo/: pyproject.toml  requirements.txt  settings.py
janken_neo/janken/: urls.py  views.py
janken_neo/janken/static/js/: main.js
janken_neo/janken/templates/janken/: index.html
janken_neo/janken_neo/: settings.py  urls.py  wsgi.py
jankenneo/: asgi.py  settings.py  settings_local.py  urls.py  wsgi.py
static/CSS/: style.css
