[tool.poetry]
name = "janken-neo"
version = "0.1.0"
description = ""
authors = ["fan-tech <fan.n.o.to.39@gmail.com>"]
readme = "README.md"
packages = [{include = "jankenneo"}]

[tool.poetry.dependencies]
python = "^3.7"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.3"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
